[package]
name = "pobsd-parser"
version = "0.1.0"
edition = "2021"
description = "library to parse the PlayOnBSD database listing games running on OpenBSD"
authors = ["Hukadan <me@hukadan.org>"]
readme = "README.md"
repository = "https://github.com/Hukadan/pobsdjs"
documentation = "https://docs.rs/pobsd-parser"
keywords = ["openbsd", "openbsd-gaming"]

[dependencies]
serde = "1.0"
serde_json = "1.0"
serde_derive = "1.0"
